# zip-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml
src/zip_extract/: __init__.py  cli.py
tests/: conftest.py  test_zip_extract.py
