[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# ──────────────────────────────────────────────────────────────────────────────
# Project metadata  (PEP 621)
# ──────────────────────────────────────────────────────────────────────────────
[project]
name        = "zip-extract"
version     = "0.0.1"
description = "Extract files from a zip archive with full path preservation and chainable path transformations."
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
  { name = "Jason", email = "jason.e.learning@gmail.com" },
]

keywords = [
  "zip", "archive", "extract", "rename", "transform", "cli",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Archiving :: Compression",
  "Topic :: Utilities",
]

# No third-party runtime dependencies — stdlib only
dependencies = []

# Optional extras
[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "hatch>=1.9",
]

# ──────────────────────────────────────────────────────────────────────────────
# CLI entry point — installs the `zip-extract` command
# ──────────────────────────────────────────────────────────────────────────────
[project.scripts]
zip-extract = "zip_extract.cli:main"

# ──────────────────────────────────────────────────────────────────────────────
# Project URLs
# ──────────────────────────────────────────────────────────────────────────────
[project.urls]
Homepage      = "https://github.com/yourname/zip-extract"
Repository    = "https://github.com/yourname/zip-extract"
"Bug Tracker" = "https://github.com/yourname/zip-extract/issues"

# ──────────────────────────────────────────────────────────────────────────────
# Hatch build — src layout
# ──────────────────────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/zip_extract"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

# ──────────────────────────────────────────────────────────────────────────────
# Hatch environments
# ──────────────────────────────────────────────────────────────────────────────
[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test     = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=zip_extract --cov-report=term-missing"
lint     = "ruff check src/ tests/"
fmt      = "ruff format src/ tests/"

# ──────────────────────────────────────────────────────────────────────────────
# Pytest
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

# ──────────────────────────────────────────────────────────────────────────────
# Ruff (linter / formatter — optional, remove if not using)
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
